# sentence_attention

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  prepare_submission.sh  pyproject.toml  pyrightconfig.json  requirements.txt
.cursor/rules/: artifacts-structure.mdc  overview.mdc
.github/workflows/: gemini-pr-review.yml  lint.yml  run-tests.yml
configs/accelerate/: 1gpu.yaml  6gpu.yaml  7gpu.yaml  8gpu_fsdp.yaml  multinode-template-fsdp.yaml  multinode-template.yaml
jobs/: kill_jobs.py  prepare_multinode_accelerate.sh  prepare_multinode_accelerate_fsdp.sh  run_eval_jobs.py  run_jobs.py  run_tokenize_dclm_job.py  run_tokenize_fineweb_eos.py  run_tokenize_job.py  run_tokenize_logits_job.py  run_tokenize_with_logits_job.py
plugins/flake8-no-chained-assignments/: README.md  pyproject.toml
plugins/flake8-no-chained-assignments/src/flake8_no_chained_assignments/: __init__.py  plugin.py
scripts/: bench_compression.py  benchmarks_progress.py  evaluate.py  fsdp_to_local_checkpoint.py  fsdp_to_local_checkpoint_accelerator.py  fsdp_to_torch_checkpoint.py  merge_tokenized_data_shards.py  pg19_eval.py  pg19_evaluate.py  ppl_results.py  results.py  results_short.py  tokenize_dclm.py  tokenize_fineweb_edu.py  tokenize_recall.py  train_sentence_llama.py
src/: tokenization_utils_fast.py
tests/: checkpoints_test.py  eos_tokenization_test.py  flex_attention_test.py  scrooge_prefill_test.py  sentence_attention_test.py  sentence_llama_test.py  sentence_tokenization_test.py  test_build_model_tokenizer.py  tokenized_fineweb_test.py
(+44 files in other folders)
